# android_device_sony_nypon

./: Android.mk  AndroidProducts.mk  BoardConfig.mk  LICENSE  README.md  aosp_nypon.mk  build-cm.sh  cm.dependencies  cm.mk  custombootimg.mk  extract-files.sh  full_nypon.mk  nypon.mk  omni_nypon.mk  proprietary-files.txt  recovery.fstab  setup-makefiles.sh  system.prop  vendorsetup.sh
alsa-lib/: Android.mk  NOTICE  configure  libtool
alsa-lib/include/: version.h
alsa-lib/src/: conf.c
bluetooth/: bdroid_buildcfg.h
combinedroot/: bootrec-device  bootrec-led  init.sh
config/: button_light_curve.cfg  cflashlib.cfg  cmdline.txt  dash.conf  dbus.conf  flashled_param_config.cfg  gps.conf  hostapd.conf  init.st-ericsson.device.rc  init.st-ericsson.usb.rc  media_codecs.xml  media_profiles.xml  p2p_supplicant.conf  ste_modem.sh  synaptics_rmi4_i2c.idc  ux500-ske-keypad.kl  vold.fstab  wpa_supplicant.conf
config/init.d/: 01stesetup  10wireless  50selinuxrelabel
config/root/: default.prop  fstab.st-ericsson  init.environ.rc  init.rc  init.st-ericsson.rc  init.st-ericsson.usb.rc  ueventd.st-ericsson.rc
hardware/: Android.mk  README
hardware/bluetooth/: vnd_u8500.txt
hardware/liblights/: lights-device.h  lights.c  lights.h
hardware/media/libomxil-bellagio/extern_components/alsa/src/: Makefile.am  library_entry_point.c  omx_alsasink_component.c  omx_alsasink_component.h  omx_alsasrc_component.c  omx_alsasrc_component.h
hardware/media/libomxil-bellagio/extern_components/alsa/test/: Makefile.am  omxaudiocapnplay.c  omxaudiocapnplay.h
hardware/media/libomxil-bellagio/extern_components/camera/src/: Makefile.am  library_entry_point.c  omx_camera_source_component.c  omx_camera_source_component.h
hardware/media/libomxil-bellagio/extern_components/examples/: configure.ac
hardware/media/libomxil-bellagio/extern_components/examples/src/: Makefile.am  omxaudiodectest.c  omxaudiodectest.h  omxaudioenctest.c  omxaudioenctest.h  omxcameratest.c  omxcameratest.h  omxmuxtest.c  omxmuxtest.h  omxparsertest.c  omxparsertest.h  omxvideocapnplay.c  omxvideocapnplay.h  omxvideodectest.c  omxvideodectest.h  omxvideoenctest.c  omxvideoenctest.h  omxvoicexchange.c  omxvoicexchange.h
hardware/media/libomxil-bellagio/extern_components/ffmpeg-dist/: README  configure.ac
hardware/media/libomxil-bellagio/extern_components/ffmpeg-dist/src/: Makefile.am  library_entry_point.c  omx_audiodec_component.c  omx_audiodec_component.h  omx_audioenc_component.c  omx_audioenc_component.h  omx_ffmpeg_colorconv_component.c  omx_ffmpeg_colorconv_component.h  omx_filereader_component.c  omx_filereader_component.h  omx_parser3gp_component.c  omx_parser3gp_component.h  omx_videodec_component.c  omx_videodec_component.h  omx_videoenc_component.c  omx_videoenc_component.h
hardware/media/libomxil-bellagio/extern_components/ffmpeg-nonfree/src/: Makefile.am  library_entry_point.c  omx_amr_audiodec_component.c  omx_amr_audiodec_component.h  omx_amr_audioenc_component.c  omx_amr_audioenc_component.h  omx_mux_component.c  omx_mux_component.h
hardware/media/libomxil-bellagio/extern_components/jpeg/: README  configure.ac
hardware/media/libomxil-bellagio/extern_components/jpeg/src/: Makefile.am  cderror.h  jinclude.h  library_entry_point.c  omx_jpegdec_component.c  omx_jpegdec_component.h  omx_jpegenc_component.c  omx_jpegenc_component.h  rdbmp.c
hardware/media/libomxil-bellagio/extern_components/jpeg/test/: Makefile.am  omxjpegdectest.c  omxjpegdectest.h  omxjpegenctest.c  omxjpegenctest.h
hardware/media/libomxil-bellagio/extern_components/template_audio_components/src/: Makefile.am  library_entry_point.c
hardware/media/libomxil-bellagio/extern_components/template_audio_components/src/audio_capturer/: Makefile.am  audio_capturer.c  audio_capturer.h  audio_capturer_test.c  audio_capturer_test.h
hardware/media/libomxil-bellagio/extern_components/template_audio_components/src/audio_decoder/: Makefile.am  audio_decoder.c  audio_decoder.h  audio_decoder_test.c  audio_decoder_test.h
hardware/media/libomxil-bellagio/extern_components/template_audio_components/src/audio_reader/: Makefile.am  audio_reader.c  audio_reader.h  audio_reader_test.c  audio_reader_test.h
hardware/media/libomxil-bellagio/extern_components/template_audio_components/src/audio_renderer/: Makefile.am  audio_renderer.c  audio_renderer.h  audio_renderer_test.c  audio_renderer_test.h
hardware/media/libomxil-bellagio/extern_components/template_audio_components/src/audio_writer/: Makefile.am  audio_writer.c  audio_writer.h  audio_writer_test.c  audio_writer_test.h
hardware/media/libomxil-bellagio/extern_components/videosrc/src/: Makefile.am  library_entry_point.c  omx_videosrc_component.c  omx_videosrc_component.h
hardware/media/libomxil-bellagio/extern_components/vorbis/src/: Makefile.am  library_entry_point.c  omx_vorbisdec_component.c  omx_vorbisdec_component.h
hardware/netlink/: .cproject  .project  Android.mk  README
include/: device_perms.h  light.h  lights-device.h
include/hardware/: copybit.h
include/system/: graphics.h
libhealthd/: Android.mk  healthd_board_montblanc.cpp
libril/: Android.mk  atchannel.h  fcp_parser.c  misc.c  missing_defines.h  ril.patch  u300-ril-manager.c  u300-ril-network.c  u300-ril-pdp.c  u300-ril-requestdatahandler.c
patches/: av.patch  bionic.patch  bootable_recovery.patch  external_bluetooth_bluedroid.patch  external_wpa_supplicant_8.patch  framework_av.patch  framework_base.patch  framework_native.patch  frameworks_base.patch  hardware_libhardware.patch  hardware_libhardware_legacy.patch  packages_apps_Bluetooth.patch  packages_apps_BluetoothExt.patch  screen_recorder.patch  system_core.patch  system_netd.patch
power/: Android.mk  power.c
prebuilt/: cn_server  hw_config.sh  resources-540x960.mk  sysmon.cfg
private_lib/: Android.mk  NOTICE  driver_nl80211.c  driver_nl80211.h  wireless_copy.h
recovery/: bootrec  bootrec-device  init.rc  postrecoveryboot.sh  recovery-keys.c  recovery.mk  runatboot.sh  twrp.fstab
releasetools/: common.py  mkelf.py  semc_ota_from_target_files
(+146 files in other folders)
