lib_LTLIBRARIES = libomxcamera.la

libomxcamera_la_SOURCES = omx_camera_source_component.c \
                          omx_camera_source_component.h \
                          library_entry_point.c

libomxcamera_la_LIBADD  = -lomxil-bellagio
libomxcamera_la_LDFLAGS = 
libomxcamera_la_CFLAGS  = $(OMXIL_CFLAGS)

